[package]
name = "polkadot-staking-miner-monitor"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.26", features = ["derive", "env"] }
codec = { version = "3.0.0", package = "parity-scale-codec" }
oasgen =  { version = "0.22.0", features = ["axum", "swagger-ui"] }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
scale-info = "2.11"
serde = "1"
serde_json = "1"
subxt = { version = "0.38.0", features = ["reconnecting-rpc-client"] }
thiserror = "2.0.11"
tokio = { version = "1.41", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

# Web API
axum = { version = "0.7.7",default-features = false, features = ["json"] }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# polkadot-sdk
polkadot-sdk = { version = "0.7", features = ["sp-npos-elections", "pallet-election-provider-multi-phase"] }