[package]
name = "polkadot-staking-miner-monitor"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
codec = { version = "3.7.4", package = "parity-scale-codec" }
oasgen =  { version = "0.25.0", features = ["axum", "swagger-ui"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
scale-info = "2.11.4"
serde = "1.0.207"
serde_json = "1.0.140"
subxt = { version = "0.41.0", features = ["reconnecting-rpc-client"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

# Web API
axum = { version = "0.8.1",default-features = false, features = ["json"] }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }

# polkadot-sdk
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "na-no-mermaid-docs" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", branch = "na-no-mermaid-docs" }
pallet-election-provider-multi-block = { git = "https://github.com/paritytech/polkadot-sdk", branch = "na-no-mermaid-docs" }

#sp-npos-elections = { path = "/home/niklasad1/Github/polkadot-sdk/substrate/primitives/npos-elections" }
#pallet-election-provider-multi-phase = { path = "/home/niklasad1/Github/polkadot-sdk/substrate/frame/election-provider-multi-phase" }
#pallet-election-provider-multi-block = { path = "/home/niklasad1/Github/polkadot-sdk/substrate/frame/election-provider-multi-block" }
